--- a/templates/hw/assignment_1.tex
+++ b/templates/hw/assignment_1.tex
@@ -52,15 +52,15 @@
 
 \newcommand{\horrule}[1]{\rule{\linewidth}{#1}} % Create horizontal rule command with 1 argument of height
 
-\title{	
-\normalfont \normalsize 
-\textsc{university, school or department name} \\ [25pt] % Your university, school and/or department name(s)
+\title{
+\normalfont \normalsize
+\textsc{Purdue University, Department of Computer Science} \\ [25pt] % Your university, school and/or department name(s)
 \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
 \huge Assignment Title \\ % The assignment title
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
 }
 
-\author{John Smith} % Your name
+\author{Hui Peng} % Your name
 
 \date{\normalsize\today} % Today's date or a custom date
 
@@ -76,13 +76,13 @@
 
 \lipsum[2] % Dummy text
 
-\begin{align} 
+\begin{align}
 \begin{split}
 (x+y)^3 	&= (x+y)^2(x+y)\\
 &=(x^2+2xy+y^2)(x+y)\\
 &=(x^3+2x^2y+xy^2) + (x^2y+2xy^2+y^3)\\
 &=x^3+3x^2y+3xy^2+y^3
-\end{split}					
+\end{split}
 \end{align}
 
 Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
@@ -91,9 +91,9 @@ Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdie
 
 \subsection{Heading on level 2 (subsection)}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 \begin{align}
-A = 
+A =
 \begin{bmatrix}
 A_{11} & A_{21} \\
 A_{21} & A_{22}
@@ -121,24 +121,24 @@ Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et 
 
 \subsection{Example of list (3*itemize)}
 \begin{itemize}
-	\item First item in a list 
+	\item First item in a list
 		\begin{itemize}
-		\item First item in a list 
+		\item First item in a list
 			\begin{itemize}
-			\item First item in a list 
-			\item Second item in a list 
+			\item First item in a list
+			\item Second item in a list
 			\end{itemize}
-		\item Second item in a list 
+		\item Second item in a list
 		\end{itemize}
-	\item Second item in a list 
+	\item Second item in a list
 \end{itemize}
 
 %------------------------------------------------
 
 \subsection{Example of list (enumerate)}
 \begin{enumerate}
-\item First item in a list 
-\item Second item in a list 
+\item First item in a list
+\item Second item in a list
 \item Third item in a list
 \end{enumerate}
 
